[project]
name = "autonomous-code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.11",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "pygithub>=2.9.1",
]
