[project]
name = "autonomous-code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.11",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.2",
    "langchain-nopii-middleware>=0.1.0",
    "langchain-openai>=1.3.2",
    "langchain-task-steering>=0.1.8",
    "pygithub>=2.9.1",
    "tree-sitter-languages>=1.10.2",
]
